4B/cs444/tests/pass/pass_implicitsupercall.joos
/* pass: implicit super call */
public class A {
  public A() { /* super(); */}
}

