4B/cs444/tests/fail/fail_transient.joos
/* fail: transient */
  public class A {
    public transient int x;
  }

